<resources>
    <string name="app_name">SubClubFragmentsDB</string>
    <string name="text_profile">Profile</string>
    <string name="action_insert_default_run_data">Default Run</string>
    <string name="action_insert_default_aux_data">Default Aux</string>
    <string name="category_session_type">Session Type</string>
    <string name="calendar_view_session_type">Session Type: </string>
    <string name="workout_view_workout_type">Type</string>
    <string name="workout_view_workout_time">Time</string>
    <string name="workout_view_description">Description</string>
    <string name="hint_session_type">Session Type</string>
    <string name="hint_duration">Duration</string>
    <string name="category_duration">Duration</string>
    <string name="calendar_view_duration">Duration: </string>
    <string name="category_completion_status">Completion Status</string>
    <string name="calendar_view_completion_status">Completion Status: </string>
    <string name="completion_status_incomplete">Incomplete</string>
    <string name="completion_status_complete">Complete</string>
    <string name="category_description">Description</string>
    <string name="hint_description">Description</string>
    <string name="run_wo_activity_title_run_wo">Run Workout</string>
    <string name="editor_insert_wo_save_failed">Saving Workout Failed</string>
    <string name="editor_insert_wo_save_successful">Workout Saved</string>
    <string name="editor_insert_wo_completion_successful">Workout Completed!</string>
    <string name="action_save">Save</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="action_insert_aerobic_run_data">Aerobic</string>
    <string name="action_insert_speed_run_data">Speed Workout</string>
    <string name="action_insert_endurance_run_data">Endurance Run</string>
    <string name="action_insert_drills_run_data">Drills</string>
    <string name="text_calendar">Calendar</string>
    <string name="text_run">Run Workout</string>
    <string name="text_strength">Aux Workout</string>
    <string name="text_plans">Plan Store</string>
    <string name="text_on_board">On Board</string>
    <string name="send_button_label">Send</string>
    <string name="player_error">Error initializing YouTube player: %s</string>
    <string name="seek_to">Jump To</string>
    <string name="seek_to_hint">Seconds</string>
    <string name="confirm_load_plan">Load this plan to your account?</string>
    <string name="plan_loaded_confirmation">The plan has been loaded to your account.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="content_description_app_loading_image">App loading image</string>
</resources>
