<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".CatalogActivity">
    <item
        android:id="@+id/action_insert_aerobic_run_data"
        android:title="@string/action_insert_aerobic_run_data"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_insert_speed_run_data"
        android:title="@string/action_insert_speed_run_data"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_insert_endurance_run_data"
        android:title="@string/action_insert_endurance_run_data"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_insert_drills_run_data"
        android:title="@string/action_insert_drills_run_data"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_insert_aux_data"
        android:title="@string/action_insert_default_aux_data"
        app:showAsAction="never" />
</menu>